--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,3 +1,7 @@
+#root {
+  overflow-x: hidden;
+}
+
 .head-container {
   display: flex;
   align-items: center;
